Fix alignment of popup

--- a/chrome-extension/battle/style.css
+++ b/chrome-extension/battle/style.css
@@ -27,7 +27,7 @@ h2 {
   background-color: #fff;
   width: 600px;
   padding: 30px 30px 10px;
-  margin: 200px auto;
+  margin: 50px auto 0;
 }
 
 .enemy {
